# pico-projects

./: .gitignore  CMakeLists.txt
bus_scan/: CMakeLists.txt  bus_scan.c
button-gp20/: CMakeLists.txt  main.c
buzzer-gp18/: CMakeLists.txt  main.c
common/include/: pwm-utils.h
common/src/: pwm-utils.c
freertos-blinky/: CMakeLists.txt  openocd.cfg
freertos-blinky/source/: FreeRTOSConfig.h  main.cpp
hello_uart/: CMakeLists.txt  hello_uart.c
led_fade/: CMakeLists.txt
project0/: CMakeLists.txt
project0/source/: main.cpp
wifi-scan/: CMakeLists.txt  lwipopts.h  main.c
